# awebo-app

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: awebo.icns
scripts/: bundle.sh  make_icns.sh
src/: ai_controller.rs  blocks.rs  commands.rs  config.rs  dialog.rs  license.rs  main.rs  menu.rs  prompt.rs  resources.rs  session.rs  system_info.rs  updater.rs  usage.rs
src/agent/: mod.rs  orchestrator.rs  parser.rs  prompt.rs  session.rs  tools.rs
src/ai/: inference.rs  mod.rs  model_manager.rs  ollama.rs  registry.rs  web_search.rs
src/app/: actions.rs  inference.rs  mod.rs  router.rs  settings.rs  state.rs  tabs.rs
src/app/views/: agent_view.rs  commands_view.rs  mod.rs  models_view.rs  sandbox_view.rs  settings_view.rs  smart_terminal_view.rs
src/git/: mod.rs
src/renderer/: backend.rs  glyph_atlas.rs  gpu_grid.rs  icons.rs  mod.rs  pixel_buffer.rs  text.rs  theme.rs
src/sandbox/: bridge.rs  config.rs  images.rs  manager.rs  mod.rs
src/terminal/: mod.rs
src/ui/: debug_viewer.rs  draw_ctx.rs  editor.rs  file_tree.rs  layout.rs  markdown.rs  mod.rs  panel_layout.rs  search_panel.rs  widget.rs
src/ui/components/: awebo.rs  block_renderer.rs  context_menu.rs  editor_renderer.rs  git_panel.rs  grid.rs  hint_banner.rs  mod.rs  side_panel.rs  tab_bar.rs  toast.rs  usage_limit_banner.rs
src/ui/components/overlay/: confirm_close.rs  debug_panel.rs  mod.rs  model_picker.rs  models_view.rs  palette.rs  pro_panel.rs  shell_picker.rs  usage_panel.rs
src/ui/components/overlay/settings/: about.rs  ai_models.rs  appearance.rs  font_picker.rs  mod.rs  sandbox_settings.rs
src/ui/components/prompt_bar/: cwd_dropdown.rs  mod.rs
src/ui/components/prompt_bar/badges/: diff_stat.rs  duration.rs  mod.rs  model.rs  (+1 more)
src/ui/syntax/: mod.rs  token.rs
src/ui/widgets/: button.rs  dropdown.rs  mod.rs  search_input.rs  text_input.rs  tooltip.rs
