[package]
name = "awebo"
version = "0.1.5"
edition = "2024"
license = "BUSL-1.1"
repository = "https://github.com/awebo-org/awebo-app"

[dependencies]
alacritty_terminal = "0.26"
winit = "0.30"
wgpu = "29"
cosmic-text = "0.18"
fontdb = "0.23"
sys-locale = "0.3"
arboard = "3.6"
dirs = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
microsandbox = "0.3"
env_logger = "0.11"
log = "0.4"
parking_lot = "0.12"
muda = { version = "0.17", default-features = false }
git2 = { version = "0.20", default-features = false }
llama-cpp-2 = "0.1"
hf-hub = "0.5"
ureq = "3"
encoding_rs = "0.8"
toml = "1.1.2"
bytemuck = { version = "1", features = ["derive"] }
resvg = "0.47"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "ico"] }
softbuffer = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.26.8"
tree-sitter-highlight = "0.26.8"
tree-sitter-language = "0.1.7"
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
regex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSWindow", "NSResponder", "NSButton", "NSControl", "NSView", "NSAlert", "NSApplication"] }
objc2-foundation = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
muda = { version = "0.17", features = ["gtk", "libxdo"] }
rfd = "0.15"

[target.'cfg(target_os = "windows")'.dependencies]
rfd = "0.15"

[dev-dependencies]
tempfile = "3.27.0"

[build-dependencies]
cc = "1.2.60"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[package.metadata.bundle]
name = "Awebo"
identifier = "com.awebo.terminal"
icon = ["assets/awebo.icns"]
resources = ["assets/"]
